--- a/css/screen.css
+++ b/css/screen.css
@@ -1,5 +1,9 @@
+p, li, ul { text-size: 14px; }
 li.blogpost { list-style: none; }
+
+pre, code, tt { background-color: #EEE; overflow: auto; }
 
 .post-title { text-decoration: none }
 .sidebar { border-left: 1px solid black; padding: 0 0 1em 1em; }
 .backlink { text-decoration: none; }
+
