--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,7 @@
 layout: default
 ---
 <h1><a class="post-title" href="/blog{{ page.url }}">{{ page.title }}</a></h1>
-<h4>{{ page.date | date_to_string }} | {{ page.time }}</h4>
-<span class="back"><a href="/blog">&lt;&lt; Back</a></span>
+<h4>{{ page.date | date_to_string }} | {{ page.time }} | <a href="/blog">&lt;&lt; Back</a></h4>
 
 {{ content }}
 
