--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,8 @@
 layout: default
 ---
 <h1><a class="post-title" href="/blog{{ page.url }}">{{ page.title }}</a></h1>
-<h4>{{ page.date | date_to_string }} | {{ page.time }} | <a href="/blog">&lt;&lt; Back</a></h4>
+<h4>{{ page.date | date_to_string }} | {{ page.time }}</h4>
+<span class="pull-2"><a href="/blog">&lt;&lt; Back</a></span>
 
 {{ content }}
 
