--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <h1><a class="post-title" href="/blog{{ page.url }}">{{ page.title }}</a></h1>
 <h4>{{ page.date | date_to_string }} | {{ page.time }}</h4>
-<span class="pull-2"><a href="/blog">&lt;&lt; Back</a></span>
+<span class="pull-2"><a href="/blog" class="post-backlink">&lt;&lt; Back</a></span>
 
 {{ content }}
 
