--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
     <![endif]-->
     <link rel="stylesheet" href="/blog/css/screen.css" type="text/css" media="screen, projection">
     <link rel="stylesheet" href="/blog/css/syntax.css" type="text/css" media="screen, projection">
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8">
   </head>
 
   <body>
