--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 ---
-<h1><a class="post-title" href="/blog{{ page.url }}">{{ page.title }}</a></h1>
+<h1><a class="post-title" href="{{ page.url }}">{{ page.title }}</a></h1>
 <h4>{{ page.date | date_to_string }} | {{ page.time }}</h4>
-<span class="pull-2"><a href="/blog" class="post-backlink">&lt;&lt; Back</a></span>
+<span class="pull-2"><a href="/" class="post-backlink">&lt;&lt; Back</a></span>
 
 {{ content }}
 
