--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <h1><a class="post-title" href="{{ page.url }}">{{ page.title }}</a></h1>
-<h4>{{ page.date | date_to_string }} | {{ page.time }}</h4>
+<h4>{{ page.date | date_to_string }} | {{ page.time }} | Tagged: {{ page.tags | array_to_sentence_string }}</h4>
 <span class="pull-2"><a href="/" class="post-backlink">&lt;&lt; Back</a></span>
 
 {{ content }}
