--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
   var disqus_shortname = 'joshualindsey'; // required: replace example with your forum shortname
 
   // The following are highly recommended additional parameters. Remove the slashes in front to use.
-  var disqus_identifier = '{{ page.title }}';
+  var disqus_identifier = "{{ page.title }}";
   var disqus_url = 'http://blog.joshualindsey.net{{ page.url }}';
 
   /* * * DON'T EDIT BELOW THIS LINE * * */
